<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/personalizacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical">

    <Button
        android:id="@+id/botonLlamada112"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/redondear4"
        android:text="@string/llamada112"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/botonleerSms"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/botonLlamada112"
        android:layout_margin="15dp"
        android:background="@drawable/redondear4"
        android:text="@string/leersms"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botonEnviarsms"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/leerSms"
        android:layout_margin="15dp"
        android:background="@drawable/redondear4"
        android:text="@string/msgsms"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botonnombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/botonEnviarsms"
        android:layout_margin="15dp"
        android:background="@drawable/redondear4"
        android:text="@string/perfil"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold" />

</LinearLayout>