<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:id="@+id/dialogo_personalizado"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:text="@string/user"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_margin="15dp"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/nombre"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="text" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/correo"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="text" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/pass"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="text" />

</LinearLayout>