<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:textColorHint="#FFFFFF"
    tools:context="tutorial.com.movilidad1.EnviarEmail"
    android:weightSum="1">

    <EditText
        android:ems="10"
        android:hint="@string/to"
        android:textStyle="bold"
        android:id="@+id/et_to"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/redondear1"
        android:textColorHighlight="#FFFFD4"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <EditText
        android:id="@+id/et_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@drawable/redondear1"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/asunto"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp"
        android:layout_below="@+id/et_to"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/escribemensaje"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@null"
        android:textColor="#FFFFFF"
        android:gravity="top|start"
        android:inputType="textPostalAddress"
        android:textColorHighlight="#FFFFD4"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp"
        android:layout_below="@+id/et_sub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button

        android:id="@+id/btn_submit"
        android:layout_width="41dp"
        android:layout_height="37dp"
        android:layout_gravity="end"
        android:layout_marginTop="21dp"
        android:layout_weight="0.03"
        android:background="@drawable/enviar"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_below="@+id/et_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>









